--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -6,19 +6,19 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %}
 {% block content %}
-  {% if owner %}
+  {% if person %}
     <div id="parents-container">
       <div id="parents-list" style="display: none; margin-top: 1rem;">
-        {% for parent in owner.parents.all %}
+        {% for parent in person.parents.all %}
           {% include 'familytree/_person_card.html' with person=parent %}
         {% endfor %}
       </div>
 
-      {% if owner.parents.all|length == 0 %}
-        <a href="{% url 'add_family_member' %}?relation=parent&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Parent</a>
-      {% elif owner.parents.all|length == 1 %}
+      {% if person.parents.all|length == 0 %}
+        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success">Add Parent</a>
+      {% elif person.parents.all|length == 1 %}
         <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
-        <a href="{% url 'add_family_member' %}?relation=parent&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Parent</a>
+        <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success">Add Parent</a>
       {% else %}
         <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
       {% endif %}
@@ -27,52 +27,52 @@
     <div id="middle-section">
       <div id="siblings-container">
         <div id="sibling-list" style="display: none; margin-top: 1rem;">
-          {% for sibling in owner.siblings.all %}
+          {% for sibling in person.siblings.all %}
             {% include 'familytree/_person_card.html' with person=sibling %}
           {% endfor %}
         </div>
 
-        {% if owner.siblings|length > 0 %}
+        {% if person.siblings|length > 0 %}
           <button class="btn btn-outline-success" onclick="toggleSection('sibling-list')">Display Siblings</button>
-          <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
+          <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success">Add Sibling</a>
         {% else %}
-          <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
+          <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success">Add Sibling</a>
         {% endif %}
       </div>
 
-      {% include 'familytree/_person_card.html' with person=owner %}
+      {% include 'familytree/_person_card.html' with person=person %}
 
       <div id="partner-container">
         <div id="partner-list" style="display: none; margin-top: 1rem;">
-          {% for partner in owner.partners.all %}
+          {% for partner in person.partners.all %}
             {% include 'familytree/_person_card.html' with person=partner %}
           {% endfor %}
         </div>
 
-        {% if owner.partner %}
+        {% if person.partner %}
           <button class="btn btn-outline-success" onclick="toggleSection('partner-list')">Display Partner</button>
         {% else %}
-          <a href="{% url 'add_family_member' %}?relation=partner&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Partner</a>
+          <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success">Add Partner</a>
         {% endif %}
       </div>
     </div>
 
     <div id="children-container">
       <div id="children-list" style="display: none; margin-top: 1rem;">
-        {% for child in owner.children.all %}
+        {% for child in person.children.all %}
           {% include 'familytree/_person_card.html' with person=child %}
         {% endfor %}
       </div>
 
-      {% if owner.children.all|length > 0 %}
+      {% if person.children.all|length > 0 %}
         <button class="btn btn-outline-success" onclick="toggleSection('children-list')">Display Children</button>
-        <a href="{% url 'add_family_member' %}?relation=child&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Child</a>
+        <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success">Add Child</a>
       {% else %}
-        <a href="{% url 'add_family_member' %}?relation=child&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Child</a>
+        <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success">Add Child</a>
       {% endif %}
     </div>
   {% else %}
-    <div id="no-owner-container">
+    <div id="no-person-container">
       <p>Please register yourself first.</p>
       <a href="{% url 'add_self' %}" class="btn btn-outline-success">Add Family Member</a>
     </div>
