Return to correct POV-View and delete correct Person.Id

--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -12,5 +12,6 @@
       <p>Birthday: {{ person.birth_date }}</p>
     </div>
   </a>
-  <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
+  <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-outline-primary">Edit Person</a>
+  
 </div>
