--- a/familytree/templates/familytree/delete_person.html
+++ b/familytree/templates/familytree/delete_person.html
@@ -5,7 +5,7 @@
   <form method="POST">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'edit_person' person.id %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
