--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -1,17 +1,18 @@
 {% load static %}
 
 <div class="person-container">
-  <a href="{% url 'family_view' person.id %}">
-    {% if "placeholder" in person.featured_image.url %}
-      <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
-    {% else %}
-      <img class="card-img-top profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
-    {% endif %}
-    <div class="person-info">
-      <p>Name: {{ person.first_name }} {{ person.last_name }}</p>
-      <p>Birthday: {{ person.birth_date }}</p>
-    </div>
-  </a>
+  {% if "placeholder" in person.featured_image.url %}
+    <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
+  {% else %}
+    <img class="card-img-top profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
+  {% endif %}
+  <div class="person-info">
+    <p>Name: {{ person.first_name }} {{ person.last_name }}</p>
+    <p>Birthday: {{ person.birth_date }}</p>
+  </div>
+  <a href="{% url 'view_details' person.id %}" class="btn btn-outline-primary">View Details</a>
   <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-outline-primary">Edit Person</a>
-  
+  {% if person.id != pov_id %}
+    <a href="{% url 'family_view' person.id %}" class="btn btn-outline-primary">Change POV</a>
+  {% endif %}
 </div>
