--- a/familytree/templates/familytree/add_self.html
+++ b/familytree/templates/familytree/add_self.html
@@ -2,11 +2,11 @@
 
 {% block content %}
   <div class="container mt-5 text-center">
-    <h2>Erzähl uns, wer du bist</h2>
+    <h2>Tell us about you!</h2>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit" class="btn btn-primary">Speichern</button>
+      <button type="submit" class="btn btn-primary">Save</button>
     </form>
   </div>
 {% endblock %}
