--- a/familytree/templates/familytree/edit_person.html
+++ b/familytree/templates/familytree/edit_person.html
@@ -8,39 +8,10 @@
 {% block content %}
   <div class="container mt-5">
     <h2>Edit Person</h2>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="post">
       {% csrf_token %}
-      <div class="mb-3">
-        <label for="id_featured_image" class="form-label">Change Image:</label>
-        {{ form.featured_image }}
-      </div>
-
-      <div class="mb-3">
-        <label for="id_first_name" class="form-label">First Name</label>
-        {{ form.first_name }}
-      </div>
-
-      <div class="mb-3">
-        <label for="id_last_name" class="form-label">Last Name</label>
-        {{ form.last_name }}
-      </div>
-
-      <div class="mb-3">
-        <label for="id_birth_date" class="form-label">Birth date</label>
-        {{ form.birth_date }}
-      </div>
-
-      <div class="mb-3">
-        <label for="id_death_date" class="form-label">Death date</label>
-        {{ form.death_date }}
-      </div>
-
-      <div class="mb-3">
-        <label for="id_bio" class="form-label">About me</label>
-        {{ form.bio }}
-      </div>
-
-      <button type="submit" class="btn btn-success">Save Changes</button>
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary">Save</button>
       <a href="{% url 'delete_person' pov_id person.id %}" class="btn btn-outline-danger">Delete</a>
       <a href="{% url 'family_view' pov_id %}" class="btn btn-secondary">Cancel</a>
     </form>
