--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -9,27 +9,47 @@
   <div class="person-container">
     {% if person %}
       {% if 'placeholder' in person.featured_image.url %}
-        <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
+      <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
       {% else %}
         <img class="card-img-top profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
       {% endif %}
-      <p>{{ person.first_name }}</p>
-      <p>{{ person.last_name }}</p>
-      <p>{{ person.birth_date }}</p>
-      {% if person.death_date %}
-        <p>{{ person.death_date }}</p>
+
+      <p><strong>Name:</strong> {{ person.first_name }} {{ person.last_name }}</p>
+
+      {% if person.nickname %}
+        <p><strong>Nickname:</strong> {{ person.nickname }}</p>
       {% endif %}
-      <p>{{ person.bio }}</p>
-      <p>Children</p>
-      <ul>
-        {% for child in person.children.all %}
-          <li>{{ child.first_name }} {{ child.last_name }}</li>
-        {% endfor %}
-      </ul>
-      {% if person.partner %}
-        <p>Partner: {{ person.partner.first_name }} {{ person.partner.last_name }}</p>
-      {% else %}
-        <p>No partner yet</p>
+
+      {% if person.birth_place %}
+        <p><strong>Birthplace:</strong> {{ person.birth_place }}</p>
+      {% endif %}
+
+      {% if person.birth_country %}
+        <p><strong>Birth Country:</strong> {{ person.get_birth_country_display }}</p>
+      {% endif %}
+
+      {% if person.language %}
+        <p><strong>Languages:</strong> {{ person.get_language_display }}</p>
+      {% endif %}
+
+      {% if person.birth_date %}
+        <p><strong>Birth Date:</strong> {{ person.birth_date }}</p>
+      {% endif %}
+
+      {% if person.death_date %}
+        <p><strong>Death Date:</strong> {{ person.death_date }}</p>
+      {% endif %}
+
+      {% if person.occupation %}
+        <p><strong>Occupation:</strong> {{ person.occupation }}</p>
+      {% endif %}
+
+      {% if person.hobbies %}
+        <p><strong>Hobbies:</strong> {{ person.hobbies }}</p>
+      {% endif %}
+
+      {% if person.bio %}
+        <p><strong>Bio:</strong> {{ person.bio }}</p>
       {% endif %}
     {% endif %}
   </div>
