--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -20,6 +20,7 @@
                 <button id="submitButton" type="submit" class="btn btn-primary btn-lg">
                   Submit
                 </button>
+                <a href="{% url 'family_view' main_person.id %}" class="btn btn-secondary mt-2">Cancel</a>
               </div>
             </form>
 
