--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
     <title>Startview</title>
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
+    {% comment %}Custom CSS{% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    {% comment %}Font Awesome CDN{% endcomment %}
     {% block extra_css %}
 
     {% endblock %}
@@ -28,38 +31,44 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Logo</a>
+          <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/yggdrasil_logo.png' %}" alt="Yggdrasil Homepage" class="logo-image" /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
           <div class="collapse navbar-collapse" id="navbarText">
+            <!-- Linke Seite -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+                <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if request.path == demo_url %}active{% endif %}" aria-current="page" href="{% url 'demo' %}">Demo</a>
+                <a class="nav-link {% if request.path == demo_url %}active{% endif %}" href="{% url 'demo' %}">Demo</a>
               </li>
               {% if user.is_authenticated %}
                 {% if person %}
                   {% url 'family_view' person.id as family_view_url %}
                   <li class="nav-item">
-                    <a class="nav-link {% if request.path == family_view_url %}active{% endif %}" aria-current="page" href="{{ family_view_url }}">View Family</a>
+                    <a class="nav-link {% if request.path == family_view_url %}active{% endif %}" href="{{ family_view_url }}">View Family</a>
                   </li>
                 {% else %}
                   <li class="nav-item">
-                    <a class="nav-link {% if request.path == add_self_url %}active{% endif %}" aria-current="page" href="{{ add_self_url }}">Start your family tree</a>
+                    <a class="nav-link {% if request.path == add_self_url %}active{% endif %}" href="{{ add_self_url }}">Start your family tree</a>
                   </li>
                 {% endif %}
               {% endif %}
+            </ul>
+
+            <!-- Rechte Seite -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+                  <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                 </li>
               {% else %}
                 <li class="nav-item">
-                  <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page" href="{% url 'account_signup' %}">Register</a>
+                  <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
+                  <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
                 </li>
               {% endif %}
             </ul>
@@ -86,7 +95,7 @@
 
     <footer class="footer text-center">
       <div class="container">
-        <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. Alle Rechte vorbehalten.</p>
+        <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved.</p>
         <nav class="footer-nav">
           <a href="{% url 'impressum' %}">Impressum</a> |
           <a href="{% url 'datenschutz' %}">Datenschutz</a> |
@@ -98,6 +107,7 @@
     {% comment %}Bootstrap JS CDN{% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
     {% block javascript %}
+
     {% endblock %}
   </body>
 </html>
