--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -3,8 +3,8 @@
 
 {% comment %}Own CSS{% endcomment %}
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/family_view.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/_person_card.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/familytree/family_view.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/familytree/_person_card.css' %}" />
 {% endblock %}
 {% block content %}
   {% if person %}
