--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
     {% comment %}Custom CSS{% endcomment %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/base/base.css' %}" />
     {% comment %}Font Awesome CDN{% endcomment %}
     {% block extra_css %}
 
