--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 {% url 'impressum' as impressum_url %}
 {% url 'home' as home_url %}
 {% url 'family_view' person.id as 'family_view_url' %}
+{% url 'person_of_the_day' as people_of_history_url %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -43,6 +44,12 @@
               <li class="nav-item">
                 <a class="nav-link {% if request.path == demo_url %}active{% endif %}" href="{% url 'demo' %}">Demo</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == faq %}active{% endif %}" href="{% url 'faq' %}">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == people_of_history_url %}active{% endif %}" href="{{ people_of_history_url }}">People of History</a>
+              </li>               
               {% if user.is_authenticated %}
                 {% if person %}
                   {% url 'family_view' person.id as family_view_url %}
@@ -93,7 +100,7 @@
       {% endblock %}
     </main>
 
-    <footer class="footer text-center">
+    <footer class="footer text-center bg-white">
       <div class="container">
         <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved.</p>
         <nav class="footer-nav">
