--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container text-center hero-section">
+  <div class="container text-center hero-section mt-3">
     <h1 class="hero-title">Welcome to Yggdrasil</h1>
     <p class="hero-subtitle">
       Discover your roots. Preserve your story. <br />
