--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -2,7 +2,7 @@
 
 <div class="person-container">
   {% if "placeholder" in person.featured_image.url %}
-    <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
+    <img class="card-img-top profile-image" src="{% static 'images/user_default_images/user_default_images/user_default_images/user_default_images/default-image.png.png.png.png.png' %}" alt="placeholder image" />
   {% else %}
     <img class="card-img-top profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
   {% endif %}
