--- a/templates/base.html
+++ b/templates/base.html
@@ -29,77 +29,78 @@
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logos/yggdrasil_logo.png' %}" alt="Yggdrasil Homepage" class="logo-image" /></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <div class="wrapper">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logos/yggdrasil_logo.png' %}" alt="Yggdrasil Homepage" class="logo-image" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-          <div class="collapse navbar-collapse" id="navbarText">
-            <!-- Linke Seite -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == demo_url %}active{% endif %}" href="{% url 'demo' %}">Demo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == people_of_history_url %}active{% endif %}" href="{{ people_of_history_url }}">People of History</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == faq %}active{% endif %}" href="{% url 'faq' %}">FAQ</a>
-              </li>
-              {% if user.is_authenticated %}
-                {% if person %}
-                  {% url 'family_view' person.id as family_view_url %}
+            <div class="collapse navbar-collapse" id="navbarText">
+              <!-- Linke Seite -->
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link {% if request.path == demo_url %}active{% endif %}" href="{% url 'demo' %}">Demo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link {% if request.path == people_of_history_url %}active{% endif %}" href="{{ people_of_history_url }}">People of History</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link {% if request.path == faq %}active{% endif %}" href="{% url 'faq' %}">FAQ</a>
+                </li>
+                {% if user.is_authenticated %}
+                  {% if person %}
+                    {% url 'family_view' person.id as family_view_url %}
+                    <li class="nav-item">
+                      <a class="nav-link {% if request.path == family_view_url %}active{% endif %}" href="{{ family_view_url }}">View Family</a>
+                    </li>
+                  {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link {% if request.path == add_self_url %}active{% endif %}" href="{{ add_self_url }}">Start your family tree</a>
+                    </li>
+                  {% endif %}
+                {% endif %}
+              </ul>
+
+              <!-- Rechte Seite -->
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                {% if user.is_authenticated %}
                   <li class="nav-item">
-                    <a class="nav-link {% if request.path == family_view_url %}active{% endif %}" href="{{ family_view_url }}">View Family</a>
+                    <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                   </li>
                 {% else %}
                   <li class="nav-item">
-                    <a class="nav-link {% if request.path == add_self_url %}active{% endif %}" href="{{ add_self_url }}">Start your family tree</a>
+                    <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
                   </li>
                 {% endif %}
-              {% endif %}
-            </ul>
-
-            <!-- Rechte Seite -->
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              {% if user.is_authenticated %}
-                <li class="nav-item">
-                  <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
-                </li>
-              {% else %}
-                <li class="nav-item">
-                  <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-
-    <main>
-      {% if messages %}
-        <div class="container mt-3">
-          {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-              {{ message }}
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </ul>
             </div>
-          {% endfor %}
-        </div>
-      {% endif %}
-      {% block content %}
+          </div>
+        </nav>
+      </header>
 
-      {% endblock %}
-    </main>
+      <main>
+        {% if messages %}
+          <div class="container mt-3">
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+          </div>
+        {% endif %}
+        {% block content %}
 
+        {% endblock %}
+      </main>
+    </div>
     <footer class="footer text-center bg-white">
       <div class="container">
         <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved.</p>
