Add simple function to insert unknown parents

--- a/familytree/templates/familytree/add_family_member.html
+++ b/familytree/templates/familytree/add_family_member.html
@@ -27,6 +27,9 @@
 
                 <div class="d-grid mt-3">
                   <button id="submitButton" type="submit" class="btn btn-primary btn-lg">Submit</button>
+                  <button id="unknownParentBtn" class="btn btn-warning mt-2" type="button">
+                    Parent Unknown
+                  </button>                  
                   <a href="{% url 'family_view' main_person.id %}" class="btn btn-secondary mt-2">Cancel</a>
                 </div>
               </form>
@@ -38,4 +41,7 @@
       </div>
     </div>
   </div>
+{% endblock %}
+{% block javascript %}
+  <script src="{% static 'javascript/add_unknown_person.js' %}"></script>
 {% endblock %}
