--- a/staticfiles/css/people_of_history/people_of_history.css
+++ b/staticfiles/css/people_of_history/people_of_history.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 body {
-  background-image: url('/static/images/backgrounds/people_of_history/papyrus_background.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('/static/images/backgrounds/people_of_history/papyrus_background.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
